<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="selectSuitBottomSheetViewModel"
            type="com.apploop.face.changer.app.viewModels.SelectSuitBottomSheetViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/cus_bottom_sheet_rounded">


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_bar_gray" />

        <LinearLayout
            android:id="@+id/lv_blazer"
            style="@style/uCrop_wrapperIconState"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:onClick="@{ ()-> selectSuitBottomSheetViewModel.onBlazerClick()}"
            app:layout_constraintEnd_toStartOf="@+id/lv_suit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_line">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/cus_rounded_gray_select_suit">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_blazer"
                    style="@style/uCrop_imageViewWidgetIcon"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_blazer" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/tv_blazer"
                style="@style/uCrop_textViewWidget"
                android:fontFamily="@font/product_sans"
                android:text="@string/blazer" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lv_suit"
            style="@style/uCrop_wrapperIconState"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:onClick="@{ ()-> selectSuitBottomSheetViewModel.onSuitClick()}"
            app:layout_constraintEnd_toStartOf="@+id/lv_formal"
            app:layout_constraintStart_toEndOf="@+id/lv_blazer"
            app:layout_constraintTop_toBottomOf="@+id/iv_line">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/cus_rounded_gray_select_suit">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_suit"
                    style="@style/uCrop_imageViewWidgetIcon"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_suit_bottom" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/tv_suit"
                style="@style/uCrop_textViewWidget"
                android:fontFamily="@font/product_sans"
                android:text="@string/suit" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lv_formal"
            style="@style/uCrop_wrapperIconState"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:onClick="@{ ()-> selectSuitBottomSheetViewModel.onFormalClick()}"
            app:layout_constraintEnd_toStartOf="@+id/lv_jacket"
            app:layout_constraintStart_toEndOf="@+id/lv_suit"
            app:layout_constraintTop_toBottomOf="@+id/iv_line">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/cus_rounded_gray_select_suit">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_formal"
                    style="@style/uCrop_imageViewWidgetIcon"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_formal" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/tv_formal"
                style="@style/uCrop_textViewWidget"
                android:fontFamily="@font/product_sans"
                android:text="@string/formal" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lv_jacket"
            style="@style/uCrop_wrapperIconState"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:onClick="@{ ()-> selectSuitBottomSheetViewModel.onJacketClick()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/lv_formal"
            app:layout_constraintTop_toBottomOf="@+id/iv_line">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/cus_rounded_gray_select_suit">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_jacket"
                    style="@style/uCrop_imageViewWidgetIcon"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_jacket" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/tv_jacket"
                style="@style/uCrop_textViewWidget"
                android:fontFamily="@font/product_sans"
                android:text="@string/jacket" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/lv_police"
            style="@style/uCrop_wrapperIconState"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:onClick="@{ ()-> selectSuitBottomSheetViewModel.onPoliceClick()}"
            app:layout_constraintEnd_toStartOf="@+id/lv_suit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lv_blazer">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/cus_rounded_gray_select_suit">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_police"
                    style="@style/uCrop_imageViewWidgetIcon"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_blazer" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/tv_police"
                style="@style/uCrop_textViewWidget"
                android:fontFamily="@font/product_sans"
                android:text="@string/police" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lv_kurta"
            style="@style/uCrop_wrapperIconState"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:onClick="@{ ()-> selectSuitBottomSheetViewModel.onKurtaClick()}"
            app:layout_constraintEnd_toStartOf="@+id/lv_formal"
            app:layout_constraintStart_toEndOf="@+id/lv_blazer"
            app:layout_constraintTop_toBottomOf="@+id/lv_blazer">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/cus_rounded_gray_select_suit">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_kurta"
                    style="@style/uCrop_imageViewWidgetIcon"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_suit_bottom" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/tv_kurta"
                style="@style/uCrop_textViewWidget"
                android:fontFamily="@font/product_sans"
                android:text="@string/kurta" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lv_bodyBuilder"
            style="@style/uCrop_wrapperIconState"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:onClick="@{ ()-> selectSuitBottomSheetViewModel.onBodyBuilderClick()}"
            app:layout_constraintEnd_toStartOf="@+id/lv_jacket"
            app:layout_constraintStart_toEndOf="@+id/lv_suit"
            app:layout_constraintTop_toBottomOf="@+id/lv_blazer">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/cus_rounded_gray_select_suit">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_bodyBuilder"
                    style="@style/uCrop_imageViewWidgetIcon"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_formal" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/tv_bodyBuilder"
                style="@style/uCrop_textViewWidget"
                android:fontFamily="@font/product_sans"
                android:text="@string/body_builder" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lv_tShirt"
            style="@style/uCrop_wrapperIconState"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:onClick="@{ ()-> selectSuitBottomSheetViewModel.onTShirtClick()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/lv_formal"
            app:layout_constraintTop_toBottomOf="@+id/lv_blazer">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/cus_rounded_gray_select_suit">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_tShirt"
                    style="@style/uCrop_imageViewWidgetIcon"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_jacket" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/tv_tShirt"
                style="@style/uCrop_textViewWidget"
                android:fontFamily="@font/product_sans"
                android:text="@string/t_shirt" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lv_christmas"
            style="@style/uCrop_wrapperIconState"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:onClick="@{ ()-> selectSuitBottomSheetViewModel.onChristmasClick()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/lv_police"
            app:layout_constraintStart_toStartOf="@+id/lv_police"
            app:layout_constraintTop_toBottomOf="@+id/lv_police">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/cus_rounded_gray_select_suit">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_christmas"
                    style="@style/uCrop_imageViewWidgetIcon"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_jacket" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/tv_christmas"
                style="@style/uCrop_textViewWidget"
                android:fontFamily="@font/product_sans"
                android:text="@string/christmas" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>